# chatsounds-preprocessor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  INSTALL.Win32  LICENSE  Makefile  Makefile.MinGW-w32  README.md  chatsounds-preprocessor.cbp  chatsounds-preprocessor.depend  error_codes.txt  filesystem.hpp  main.cpp  main_old.cpp  setup.sh  version.h  version.h.in
cmake/: FindCPPexperimental-Copyright.txt  FindFFMPEG.cmake  filesystem.cpp
libs/: setup-ffmpeg-mingw-cc.sh  setup-ffmpeg-native.sh  setup-ffmpeg.sh
libs/patches/: ffmpeg-configure-no-autodetect-externals.patch
res/: windows-fileinfo.rc  windows-fileinfo.rc.in
src/: constants.hpp  file_util.cpp  file_util.hpp  info.cpp  info.hpp  preprocessor.cpp  preprocessor.hpp  types.hpp  util.cpp  util.hpp
src_old/: error_logger.cpp  file_util.cpp  preprocessor.cpp  preprocessor.hpp  ui.cpp
tests/: file_util.cpp  preprocessor.cpp  types.cpp  util.cpp
